--- a/lab1/src/coach.html
+++ b/lab1/src/coach.html
@@ -29,36 +29,41 @@
             </aside>
 
             <section class="main_section">
-                <h3 class="main_section_invite">Погляньте на наших тренерів!</h3>
-                <div class="coaches_content">
-                    <h2>Ось декілька наших козаків:</h2>
-                    <img 
-                        src="images/arnold-schwarzenegger-5.jpg" 
-                        alt="arnold-schwarzenegger-5"
-                        width="600"
-                    />
-                    <p>Арнольд Шевчук</p>
-                    <img 
-                        src="images/men-police-ronnie-coleman-wallpaper-preview.jpg" 
-                        alt="ronnie-coleman"
-                        width="600"
-                    />
-                    <p>Роні Кулмен</p>
-                    <img 
-                        src="images/fa8935fe87dc94ea265dcad279c11b06.jpg" 
-                        alt="DinoRamon"
-                        width="600"
-                    />
-                    <p>Рамон Дудик</p>
+                <div class="upper_section">
+                    <h3>Дізнайтеся про наших тренерів!</h3>
                 </div>
-                <h3 class="main_section_time">У нас тільки найкраще</h3>
+                <div class="lower_sections">
+                    <div class="center_section">
+                        <div class="main_section_aboutUS">
+                            <h2>Ось декілька наших козаків:</h2>
+                            <img 
+                                src="images/arnold-schwarzenegger-5.jpg" 
+                                alt="arnold-schwarzenegger-5"
+                                width="600"
+                                />
+                                <p>Арнольд Шевчук</p>
+                                <img 
+                                    src="images/men-police-ronnie-coleman-wallpaper-preview.jpg" 
+                                    alt="ronnie-coleman"
+                                    width="600"
+                                />
+                                <p>Роні Кулмен</p>
+                                <img 
+                                    src="images/fa8935fe87dc94ea265dcad279c11b06.jpg" 
+                                    alt="DinoRamon"
+                                    width="600"
+                                />
+                                <p>Рамон Дудик</p>
+                        </div>
+                        <h3 class="main_section_info">У нас тільки найкраще</h3>
+                    </div>
+                    <div class="right_side">
+                        <p>
+                            У нас працюють лише кваліфіковані тренери!
+                        </p>
+                    </div>
+                </div>
             </section>
-
-            <aside class="right_side">
-                <p>
-                    У нас працюють лише кваліфіковані тренери!
-                </p>
-            </aside>
         </main>
 
         <footer>
