--- a/lab1/src/history.html
+++ b/lab1/src/history.html
@@ -29,28 +29,33 @@
             </aside>
 
             <section class="main_section">
-                <h3 class="main_section_invite">Як нас було створено?</h3>
-                <div class="main_section_content">
-                    <p>
-                        Колись у невеликому місті на узбережжі жив молодий хлопець на ім'я Андрій.
-                        Він завжди мріяв бути сильним, як герої його улюблених книжок, але насправді був звичайним, 
-                        трохи худорлявим студентом, який більшість часу проводив за підручниками.
-                        Одного дня, прогулюючись старими вуличками міста, він натрапив на закинуту будівлю з вибитими вікнами та обдертими стінами.
-                        Колись тут був завод, але вже багато років ніхто не використовував ці приміщення. Андрій, стоячи перед величезними дверима, 
-                        раптом відчув, як у нього з’являється ідея: перетворити цю похмуру споруду на місце сили та здоров’я. 
-                        Він вирішив створити власний спортзал.
-                    </p>
+                <div class="upper_section">
+                    <h3>Як нас було створено?</h3>
                 </div>
-                <h3 class="main_section_time">У нас тільки найкраще</h3>
+                <div class="lower_sections">
+                    <div class="center_section">
+                        <div class="main_section_aboutUS">
+                            <p>
+                                Колись у невеликому місті на узбережжі жив молодий хлопець на ім'я Андрій.
+                                Він завжди мріяв бути сильним, як герої його улюблених книжок, але насправді був звичайним, 
+                                трохи худорлявим студентом, який більшість часу проводив за підручниками.
+                                Одного дня, прогулюючись старими вуличками міста, він натрапив на закинуту будівлю з вибитими вікнами та обдертими стінами.
+                                Колись тут був завод, але вже багато років ніхто не використовував ці приміщення. Андрій, стоячи перед величезними дверима, 
+                                раптом відчув, як у нього з’являється ідея: перетворити цю похмуру споруду на місце сили та здоров’я. 
+                                Він вирішив створити власний спортзал.
+                            </p>
+                        </div>
+                        <h3 class="main_section_info">У нас тільки найкраще</h3>
+                    </div>
+                    <div class="right_side">
+                        <p>
+                            Ви будете задоволені результатом!
+                        </p>
+                    </div>
+                </div>
             </section>
-
-            <aside class="right_side">
-                <p>
-                    Ви будете задоволені результатом!
-                </p>
-            </aside>
         </main>
-
+        
         <footer>
             <p>Не пропустіть унікальну можливіть!</p>
             <h2 class="footer_logo"> СПОРТЗАЛ "РОМАШКА" </h2>
