--- a/lab1/src/index.html
+++ b/lab1/src/index.html
@@ -22,25 +22,28 @@
         <main>
             <aside class="left_side">
                 <p>
-                    Допоможимо Вам побудувати себе та свій дух!
+                    Допоможемо Вам побудувати себе та свій дух!
                 </p>
             </aside>
 
             <section class="main_section">
-                <h3 class="main_section_invite">Приєднюйтеся до нашого спортивного колективу!</h3>
-                <img class="main_section_image"
-                    src="images/gymlogo.jpg"
-                    alt="gymlogo"
-                    width="600"
-                />
-                <h3 class="main_section_time">Працюємо з 8:00 по 21:00</h3>
+                <div class="upper_section">
+                    <h3>Приєднюйтеся до нашого спортивного колективу!</h3>
+                </div>
+                <div class="lower_sections">
+                    <div class="center_section">
+                        <div class="main_section_image">
+                            <img src="images/gymlogo.jpg" alt="gymlogo"/>
+                        </div>
+                        <h3 class="main_section_info">Працюємо з 8:00 по 21:00</h3>
+                    </div>
+                    <div class="right_side">
+                        <p>
+                            У нас лише найкраще!
+                        </p>
+                    </div>
+                </div>
             </section>
-
-            <aside class="right_side">
-                <p>
-                    Усе найкраще спорядження тільки у спортзалі "РОМАШКА"
-                </p>
-            </aside>
         </main>
 
         <footer>
