--- a/lab1/src/place.html
+++ b/lab1/src/place.html
@@ -22,33 +22,40 @@
         <main>
             <aside class="left_side">
                 <p>
-                    Допоможимо Вам побудувати себе та свій дух!
+                    Допоможeмо Вам побудувати себе та свій дух!
                 </p>
             </aside>
 
             <section class="main_section">
-                <h3 class="main_section_invite">Ми знаходимося у м.Володимир на вул. Генерала Шухевича!</h3>
-                <img class="main_section_image"
-                    src="images/location.png"
-                    alt="location"
-                    usemap="#locationmap"
-                />
-                <map name="locationmap">
-                    <area 
-                        shape="rect"
-                        coords="0, 0, 1050, 700"
-                        href="about_us.html" 
-                        alt="Детальна інформація про нас"
-                    />
-                </map>
-                <h3 class="main_section_time">Працюємо з 8:00 по 21:00</h3>
+                <div class="upper_section">
+                    <h3>Ми знаходимося у м.Володимир на вул. Генерала Шухевича!</h3>
+                </div>
+                <div class="lower_sections">
+                    <div class="center_section">
+                        <div class="main_section_aboutUS">
+                            <img class="main_section_image"
+                                src="images/location.png"
+                                alt="location"
+                                usemap="#locationmap"
+                            />
+                            <map name="locationmap">
+                                <area 
+                                    shape="rect"
+                                    coords="0, 0, 1050, 700"
+                                    href="about_us.html" 
+                                    alt="Детальна інформація про нас"
+                                />
+                            </map>
+                        </div>
+                        <h3 class="main_section_info">Працюємо з 8:00 по 21:00</h3>
+                    </div>
+                    <div class="right_side">
+                        <p>
+                            Ми чекаємо на Вас!
+                        </p>
+                    </div>
+                </div>
             </section>
-
-            <aside class="right_side">
-                <p>
-                    Ми чекаємо на Вас!
-                </p>
-            </aside>
         </main>
 
         <footer>
