--- a/lab1/src/about_us.html
+++ b/lab1/src/about_us.html
@@ -29,23 +29,28 @@
             </aside>
 
             <section class="main_section">
-                <h3 class="main_section_invite">Дізнайтеся щось цікаве про нас!</h3>
-                <div class="main_section_content">
-                    <h2>Хто ми такі?</h2>
-                    <p>
-                        Ми звичайні люди, що полюбляємо спорт.
-                        Наша головна мета - передати знання іншим та допомогти досягти своєї цілі.
-                        Ми віримо, що ти здатен на будь-що!
-                    </p>
+                <div class="upper_section">
+                    <h3>Дізнайтеся щось цікаве про нас!</h3>
                 </div>
-                <h3 class="main_section_time">У нас тільки найкраще</h3>
+                <div class="lower_sections">
+                    <div class="center_section">
+                        <div class="main_section_aboutUS">
+                            <h2>Хто ми такі?</h2>
+                            <p>
+                                Ми звичайні люди, що полюбляємо спорт.
+                                Наша головна мета - передати знання іншим та допомогти досягти своєї цілі.
+                                Ми віримо, що ти здатен на будь-що!
+                            </p>
+                        </div>
+                        <h3 class="main_section_info">У нас тільки найкраще</h3>
+                    </div>
+                    <div class="right_side">
+                        <p>
+                            У нас працюють лише кваліфіковані тренери!
+                        </p>
+                    </div>
+                </div>
             </section>
-
-            <aside class="right_side">
-                <p>
-                    У нас працюють лише кваліфіковані тренери!
-                </p>
-            </aside>
         </main>
 
         <footer>
