--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PWA labs</title>
     <link rel="stylesheet" href="style.css" />
-    <base href="" /> 
+    <base href="https://vladarchuk124.github.io/PWA_labs/" /> 
   </head>
   <body>
     <header>
@@ -14,10 +14,16 @@
     </header>
     <main>
       <section class="works">
-        <div class="lab1_block">
+        <div class="lab_block">
           <h3><a href="lab1/src/index.html">Lab 1</a></h3>
           <p>
             Перша лабораторна робота - це простий веб-застосунок, який демонструє основні принципи програмування веб-застосувань.
+          </p>
+        </div>
+        <div class="lab_block">
+          <h3><a href="lab2/src/index.html">Lab 2</a></h3>
+          <p>
+            Друга лабораторна робота - це верстка веб-сторінок оформлених за допомогою CSS Flexbox, Grid та Table.
           </p>
         </div>
       </section>
