--- a/lab2/src/page3/index.html
+++ b/lab2/src/page3/index.html
@@ -22,25 +22,29 @@
                         Допоможемо Вам побудувати нове житло чи сходити у шахту!
                     </td> 
                     <td class="main_section_cell">
-                        <div class="upper_section">
-                            <nav>
-                                <ul>
-                                    <li><a href="../index.html">FlexBox</a></li>
-                                    <li><a href="../page2/index.html">Grid</a></li>
-                                    <li><a href="index.html">Table</a></li>
-                                 </ul>
-                            </nav>
-                        </div>
-                        <div class="lower_sections">
-                            <div class="center_section">
+                        <table class="upper_section">
+                            <tr>
+                                <td>
+                                    <nav>
+                                        <ul>
+                                            <li><a href="../index.html">FlexBox</a></li>
+                                            <li><a href="../page2/index.html">Grid</a></li>
+                                            <li><a href="index.html">Table</a></li>
+                                        </ul>
+                                    </nav>
+                                </td>
+                            </tr>
+                        </table>
+                        <table class="lower_section">
+                            <td class="center_section">
                                 <div class="main_section_image">
-                                    <img src="../images/logo.jpg" alt="logo"/>
+                                    <img src="../images/logo.jpg" alt="logo" />
                                 </div>
                                 <h3 class="main_section_info">Працюємо з 8:00 по 21:00</h3>
-                            </div>
-                            <div class="right_side"> </div>
-                        </div>
-                    </td>
+                            </td>
+                            <td class="right_side"></td>
+                        </table>
+                    </td>      
                 </tr>
             </table>
         </main>
