--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
             Друга лабораторна робота - це верстка веб-сторінок оформлених за допомогою CSS Flexbox, Grid та Table.
           </p>
         </div>
+        <div class="lab_block">
+          <h3><a href="lab3/src/index.html">Lab 3</a></h3>
+          <p>
+            Третя лабораторна робота - це адаптована до змін розміру веб-сторінка та екземпляр сторінки для поштової розсилки 
+          </p>
+        </div>
       </section>
     </main>
   </body>
