--- a/lab3/src/email/index.html
+++ b/lab3/src/email/index.html
@@ -15,7 +15,7 @@
             <td item-align="center">
                 <table width=100% cellpadding="0" cellspacing="0" style="border-collapse: collapse;">
                     <tr>
-                        <td style="background-image: url(../images/Header-background.png); background-size: 7%; padding: 20px; color: white;">
+                        <td style="background-color: rgb(35, 100, 35); background-size: 7%; padding: 20px; color: white;">
                             <h1 style="margin: 0; font-size: 24px;">Minecraft сервіс</h1>
                             <h3 style="margin: 0; font-size: 16px; text-align: end;">Таке тільки у нас!</h3>
                         </td>
@@ -28,18 +28,18 @@
                             <td width="80%">
                                 <table width=100% cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <td colspan="2" style="background-image: url(../images/nav-bg.png); background-size: 7%; text-align: center;"> 
+                                        <td colspan="2" style="background-color: #f59b15; background-size: 7%; text-align: center;"> 
                                             <h3>Приєднуйтеся до нашого сервісу!</h3>
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td width="80%" style="background-image: url('../images/Background.webp'); background-size: 48%; filter: brightness(1.4); text-align: center;">
+                                        <td width="80%" style="background-color: rgb(35, 69, 100); background-size: 48%; filter: brightness(1.4); text-align: center;">
         
-                                            <img src="../images/logo.jpg" alt="logo" style="width: 40%; height: auto; margin-bottom: 10px;" />
-                                            <h3 style="background-image: url(../images/nav-bg.png); filter: brightness(0.8); font-size: 18px; margin: 0;">Працюємо з 8:00 по 21:00</h3>
+                                            <h1>Minecraft service</h1>
+                                            <h3 style="background-color: #f59b15; filter: brightness(0.8); font-size: 18px; margin: 0;">Працюємо з 8:00 по 21:00</h3>
         
                                         </td>
-                                        <td width="20%" style="background-image: url(../images/rightSide.jpeg); background-size: 80%;"></td> 
+                                        <td width="20%" style="background-color: rgb(35, 100, 35); background-size: 80%;"></td> 
                                     </tr>
                                 </table>     
                             </td> 
