lab 4 files + some increases main site

--- a/index.html
+++ b/index.html
@@ -29,7 +29,13 @@
         <div class="lab_block">
           <h3><a href="lab3/src/index.html">Lab 3</a></h3>
           <p>
-            Третя лабораторна робота - це адаптована до змін розміру веб-сторінка та екземпляр сторінки для поштової розсилки 
+            Третя лабораторна робота - це адаптована до змін розміру веб-сторінка та екземпляр сторінки для поштової розсилки.
+          </p>
+        </div>
+        <div class="lab_block">
+          <h3><a href="lab4/src/index.html">Lab 4</a></h3>
+          <p>
+            Четверта лабораторна робота - це створення верстки веб-сторінок із підготовлених графічних макетів дизайну веб-сторінки.
           </p>
         </div>
       </section>
