--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             Четверта лабораторна робота - це створення верстки веб-сторінок із підготовлених графічних макетів дизайну веб-сторінки.
           </p>
         </div>
+        <div class="lab_block">
+          <h3><a href="lab5/src/index.html">Lab 5</a></h3>
+          <p>
+            П'ята лабораторна робота - це виконання маніпуляцій з HTML та CSS за допомогою Javascript.
+          </p>
+        </div>
       </section>
     </main>
   </body>
