--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
             П'ята лабораторна робота - це виконання маніпуляцій з HTML та CSS за допомогою Javascript.
           </p>
         </div>
+        <div class="lab_block">
+          <h3><a href="lab6/src/index.html">Lab 5</a></h3>
+          <p>
+            Шоста лабораторна робота - це організація бекенду і фронтенду за допомогою Javascript та PHP.
+          </p>
+        </div>
       </section>
     </main>
   </body>
