--- a/lab6/src/page2/index.html
+++ b/lab6/src/page2/index.html
@@ -19,11 +19,18 @@
                 <div id="burgerMenu" class="burger-menu">
                     <button class="close-btn" onclick="toggleMenu()">✖</button>
                     <nav>
-                        <ul id="MenuItems">
+                        <ul>
                             <h2>You want to leave? :(</h2>
                             <li><a href="../index.html">Go to page 1</a></li>
                             <li><a href="../../../index.html">Of course</a></li>
                         </ul>
+                        <div>
+                            <nav>
+                                <ul id="MenuItems">
+
+                                </ul>
+                            </nav>
+                        </div>
                     </nav>
                 </div>
                 <img src="../images/lollipop.png" alt="lolipop">
