some new images

--- a/lab6/src/index.html
+++ b/lab6/src/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Candies</title>
         <link rel="stylesheet" href="style.css" />
+        <link rel="icon" href="images/icon.ico">
     </head>
     <body>
         <header>
@@ -52,7 +53,7 @@
                         <h3 class="main_section_info">Want to buy some? Follow the instructions above</h3>
                     </div>
                     <div class="right_side">
-                        
+                        <img src="images/mef.png" alt="mef">
                     </div>
                 </div>
             </section>
