update for lab7

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
             Шоста лабораторна робота - це організація бекенду і фронтенду за допомогою Javascript та PHP.
           </p>
         </div>
+        <div class="lab_block">
+          <h3><a href="lab7/src/index.html">Lab 7</a></h3>
+          <p>
+            Сьома лабораторна робота - це ознайомлення із роботою серверів та скриптів в режимі підвищеного
+            навантаження.
+          </p>
+        </div>
       </section>
     </main>
   </body>
